[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/ui/menu_bgs/menu_main_background.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttons/startbutton_hover.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/title_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/buttons/quitbutton_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttons/optionsbutton.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/buttons/buttontheme.tres" type="Theme" id=6]
[ext_resource path="res://assets/ui/buttons/optionsbutton_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/buttons/startbutton.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/menu_bgs/menu_main_background5.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/menu_bgs/menu_main_background4.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/menu_bgs/menu_main_background2.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/menu_bgs/menu_main_background1.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/menu_bgs/menu_main_background3.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/buttons/quitbutton.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/buttons/button04.png" type="Texture" id=15]
[ext_resource path="res://scenes/ui/credits_screen.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/ui/options_screen.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/ui/keybindings_screen.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/ui/buttons/button04_hover.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/buttons/retrybutton.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/buttons/retrybutton_hover.png" type="Texture" id=21]
[ext_resource path="res://scenes/ui/cursor_particles.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/ui/scene_transition.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/sound/theme_menu.wav" type="AudioStream" id=24]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StartPlayer/TitleBackgroundAnimation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartPlayer/TitleBackgroundAnimation:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartPlayer/TitleBackgroundAnimation:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuMusic:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Start"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("StartPlayer/TitleBackgroundAnimation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartPlayer/TitleBackgroundAnimation:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuMusic:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TitleBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Credits" type="TextureButton" parent="."]
margin_left = 1563.0
margin_top = 939.0
margin_right = 1893.0
margin_bottom = 1069.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 19 )
flip_h = true

[node name="Label" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -38.0
margin_right = 79.0
margin_bottom = 38.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.882353, 0.847059, 0.776471, 1 )
text = "credits"

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 780.0
margin_top = 400.0
margin_right = 1112.0
margin_bottom = 918.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 330.0
margin_bottom = 532.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 330.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_right = 330.0
margin_bottom = 130.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 2 )

[node name="Retry" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 134.0
margin_right = 330.0
margin_bottom = 264.0
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 21 )

[node name="Options" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 268.0
margin_right = 330.0
margin_bottom = 398.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="Quit" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 402.0
margin_right = 330.0
margin_bottom = 532.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 4 )

[node name="StartPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Start = SubResource( 5 )

[node name="TitleBackgroundAnimation" type="AnimatedSprite" parent="StartPlayer"]
visible = false
position = Vector2( 960, 540 )
frames = SubResource( 6 )

[node name="OptionsScreen" parent="." instance=ExtResource( 17 )]
visible = false

[node name="CreditsScreen" parent="." instance=ExtResource( 16 )]
visible = false

[node name="KeybindingsScreen" parent="." instance=ExtResource( 18 )]
visible = false

[node name="CursorParticles" parent="." instance=ExtResource( 22 )]

[node name="SceneTransition" parent="." instance=ExtResource( 23 )]

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -10.0

[connection signal="pressed" from="Credits" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="StartPlayer" to="." method="_on_StartPlayer_animation_finished"]
[connection signal="back_to_last" from="OptionsScreen" to="." method="_on_OptionsScreen_back_to_last"]
[connection signal="to_keybind" from="OptionsScreen" to="." method="_on_OptionsScreen_to_keybind"]
